# atomiks

./: CMakeLists.txt  Makefile  Makefile.win  atomcore.c  atomcore.h  atomiks.c  atomiks.spec  cfg.c  cfg.h  data.h  drv_gra.c  drv_gra.h  drv_inp.c  drv_inp.h  drv_snd.c  drv_snd.h  drv_tim.c  drv_tim.h  editor.c  history.txt  make_data.sh  readme.txt
.github/workflows/: ci.yml
img/: credits.xcf  instructs.xcf  pausedscreen.xcf  timeout.xcf
res/: atomiks.desktop
src/: atomcore.c  atomcore.h  atomiks.c  cfg.c  cfg.h  drv_gra.c  drv_gra.h  drv_inp.c  drv_inp.h  drv_snd.c  drv_snd.h  drv_tim.c  editor.c  gz.c  gz.h
tools/: file2c.c  png2bmp.c
